// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserEditInactive with item.value as a string should render with text from props 1`] = `
<div
  className="row"
  style={
    Object {
      "borderBottom": "1px solid lightgrey",
    }
  }
>
  <div
    className="column"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <i
      aria-hidden="true"
      className="location arrow large icon"
      onClick={[Function]}
    />
    <div
      style={
        Object {
          "marginLeft": "1rem",
        }
      }
    >
      <div
        className="header"
      >
        Location
      </div>
      <div
        className="description"
      >
        New York City
      </div>
    </div>
  </div>
  <div
    className="column"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <button
      className="ui tiny button"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
</div>
`;

exports[`UserEditInactive with item.value as an array should render with text from props 1`] = `
<div
  className="row"
  style={
    Object {
      "borderBottom": "1px solid lightgrey",
    }
  }
>
  <div
    className="column"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <i
      aria-hidden="true"
      className="ban large icon"
      onClick={[Function]}
    />
    <div
      style={
        Object {
          "marginLeft": "1rem",
        }
      }
    >
      <div
        className="header"
      >
        Dietary Preferences
      </div>
      <div
        className="description"
      >
        Gluten-free
      </div>
      <div
        className="description"
      >
        Vegan
      </div>
      <div
        className="description"
      >
        Veggitarian
      </div>
    </div>
  </div>
  <div
    className="column"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <button
      className="ui tiny button"
      onClick={[Function]}
    >
      Edit
    </button>
  </div>
</div>
`;
